--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 <title>Assignment</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
       <button class="pad" style="--b:5px;--t:5px;--l:20px;--r:20px">My Portfolio</button>
     </div>
     <div class="column figandpara">
-      <div class="row_">
+      <div class="row_ pad" style="--b:15px;--t:0px;--l:0px;--r:10px">
         <div>
           <img class="image" src="logo.jpg" alt="logo">
         </div>
@@ -36,7 +37,7 @@
           <p>Are own design entire former get should. Advantages boisterous day excellence boy.</p>
         </div> 
       </div>
-      <div class="row_">
+      <div class="row_ pad" style="--b:15px;--t:0px;--l:0px;--r:10px">
         <div>
           <img class="image" src="logo.jpg" alt="logo">
         </div>
@@ -45,7 +46,7 @@
           <p>Are own design entire former get should. Advantages boisterous day excellence boy.</p>
         </div> 
       </div>
-      <div class="row_">
+      <div class="row_ pad" style="--b:0px;--t:0px;--l:0px;--r:10px">
         <div>
           <img class="image" src="logo.jpg" alt="logo">
         </div>
@@ -62,46 +63,57 @@
 <!--MY SKILLS-->
 
   <h3 class="heading_">My Skills</h3>
-  <div class="figandcaption">
-    <figure style="padding-top: 0%; margin-top: 0%">
-      <img class="image" src="logo.jpg" alt="logo">
-      <figcaption>Skill Name</figcaption>
-    </figure>
-    <figure>
-      <img class="image" src="logo.jpg" alt="logo">
-      <figcaption>Skill Name</figcaption>
-    </figure>
-    <figure>
-      <img class="image" src="logo.jpg" alt="logo">
-      <figcaption>Skill Name</figcaption>
-    </figure>
-    <figure>
-      <img class="image" src="logo.jpg" alt="logo">
-      <figcaption>Skill Name</figcaption>
-    </figure>
-  </div>
+    <div class="figandcaption">
+      <figure style="padding-top: 0%; margin-top: 0%">
+        <img class="image" src="logo.jpg" alt="logo">
+        <figcaption>Skill Name</figcaption>
+      </figure>
+      <figure>
+        <img class="image" src="logo.jpg" alt="logo">
+        <figcaption>Skill Name</figcaption>
+      </figure>
+      <figure>
+        <img class="image" src="logo.jpg" alt="logo">
+        <figcaption>Skill Name</figcaption>
+      </figure>
+      <figure>
+        <img class="image" src="logo.jpg" alt="logo">
+        <figcaption>Skill Name</figcaption>
+      </figure>
+    </div>
+  
 
   <hr>
 
 <!--ABOUT ME-->
-
-  <h3 class="heading_">About Me</h3>
+  <div>
+    <h3 class="heading_">About Me</h3>
   <div class="row_ aboutme ">
     <div class="left">
       <img class="image" src="logo.jpg" alt="logo">
     </div>
-    <div class="right">
-      <p>Are own design entire former get should. Advantages boisterous day excellence boy.</p>
+    <div class="column">
+      <div class="right">
+        <p><strong>Are own design entire former get should.Advantages boisterous day excellence boy</strong><br><br>Advantages boisterous day excellence boy.</p>
+      </div>
+      <div>
+        <i class="fab fa-facebook fa-lg pad" style="--b:20px;--t:20px;--l:50px;--r:0px"></i>
+        <i class="fab fa-linkedin fa-lg pad" style="--b:20px;--t:20px;--l:20px;--r:0px"></i>
+        <i class="fab fa-twitter-square fa-lg pad" style="--b:20px;--t:20px;--l:20px;--r:0px"></i>
+      </div>  
     </div>
+  </div>
   </div>
 
   <hr>
 
 <!--MY PROJECTS-->
+<!--test-->
 
+  <div>
   <h3 class="heading_">My Projects</h3>
-  <div class="column myprojects">
-    <div class="row_">
+    <div class="column myprojects">
+    <div class="row_ pad" style="--b:20px;--t:20px;--l:50px;--r:0px">
       <div>
         <div>
           <img class="image" src="logo.jpg" alt="logo">
@@ -123,7 +135,7 @@
         </div>
       </div>
     </div>
-    <div class="row_">
+    <div class="row_ pad" style="--b:20px;--t:20px;--l:50px;--r:0px">
       <div>
         <div>
           <img class="image" src="logo.jpg" alt="logo">
@@ -145,7 +157,9 @@
         </div>
       </div>
     </div>
+    </div>
   </div>
+  
 
   <hr>
 
